testdata/fixtures/models/negative/bare_o_stems.py
# bare (non-hyphenated) OpenAI reasoning-model stems, no dated suffix at
# all — the family list carries the exact stem, not just the hyphenated
# prefix (A9, 03-REVIEW.md) — must never fire
model = "o1"
